# libsig

./: .gitignore  .travis.yml  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac  index.html  libsig.vcxproj  params.json
include/: sig.h
m4/: .gitignore
src/: config.h  dllmain.cc  sig-ctx.cc  sig-ctx.h  sig.cc
